許可するURLを定数化